CHANGES IN VERSION 1.35.2
--------------------------

UPDATED FEATURES:
     o Behind the scenes xcms now uses the xcmsSource class to read raw data.
       This allows e.g. to write a class that pulls raw data 
       from e.g. a database

CHANGES IN VERSION 1.35.1
--------------------------

UPDATED FEATURES:
     o The mzData export is now much faster and uses less memory

CHANGES IN VERSION 1.33.16
--------------------------

USER VISIBLE CHANGES

    o diffreport and plotEIC have a new parameter mzdec, with is the number of decimal places
      of the m/z values in the EIC plot title

CHANGES IN VERSION 1.33.16
--------------------------

UPDATED FEATURES:
Lock mass gap filler now works with netCDF lock mass function file to find the exact times of the scans and works with
the newer Waters MS instruments.

CHANGES IN VERSION 1.33.15
--------------------------

BUG FIXES

    o scanrage is now honoured in xcmsSet, also when in parallel mode

CHANGES IN VERSION 1.33.14
--------------------------

BUG FIXES

    o scanrage is now honoured in xcmsRaw, and consequently
      also in xcmsSet(matchedFilter), where previously
      it was ignored.

CHANGES IN VERSION 1.33.13
--------------------------

BUG FIXES

    o write.cdf() has been fixed to write files AMDIS can read

CHANGES IN VERSION 1.33.12
--------------------------

BUG FIXES

    o write.mzData adds Polarity to the file if available

CHANGES IN VERSION 1.33.11
--------------------------

USER VISIBLE CHANGES

    o centWave uses a new method to estimate local noise which improves detection of closely spaced peaks

NEW FEATURES

    o placeholder

BUG FIXES

    o group.mzClust was failing when result had one peak


For more details and all changes before May 2012 please see the (now discontinued) CHANGELOG in the source package (inst/ folder).

CHANGED BEHAVIOUR since Version 1.32:

Other Changes since Version 1.32:

* improved mzData writing, now includes MSn spectra and less verbose.